# test_vscode

./: .gitignore  CMakeLists.txt  README.md  test.c
.devcontainer/: devcontainer.json
.github/classroom/: autograding.json
.github/workflows/: autograding.yml  build_and_run_tests.yml  classroom.yml
src/: main.c
tests/: CMakeLists.txt  test_main.cpp
